--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "mws udacity course",
   "main": "app.js",
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "browser-sync": "^2.26.0",
     "express": "^4.16.3",
-    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^5.0.0",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "imagemin-pngquant": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^6.0.0"
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify-es": "^1.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
